Test+Metric Service Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@
 ########################################## Quarkus Config - Start ######################################################
 ########################################################################################################################
 
-quarkus.http.port=8080
+quarkus.http.port=8099
 quarkus.ssl.native=true
 
 quarkus.banner.path=logo.txt
-quarkus.application.name=fyodor
+quarkus.application.name=genny-test-service
 quarkus.container-image.group=gennyproject
-quarkus.container-image.name=fyodor
+quarkus.container-image.name=genny-test-service
 
 quarkus.resteasy.gzip.enabled=true 
 quarkus.resteasy.gzip.max-input=10M
@@ -114,6 +114,10 @@ quarkus.kafka-streams.topics=baseentitys
 quarkus.devservices.enabled=false
 quarkus.live-reload.instrumentation=true
 
+mp.messaging.outgoing.test_dataout.connector=smallrye-kafka
+mp.messaging.outgoing.test_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.test_dataout.topic=test_data
+
 mp.messaging.outgoing.search_eventsout.connector=smallrye-kafka
 mp.messaging.outgoing.search_eventsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.search_eventsout.topic=search_events
@@ -121,10 +125,6 @@ mp.messaging.outgoing.search_eventsout.topic=search_events
 mp.messaging.outgoing.search_dataout.connector=smallrye-kafka
 mp.messaging.outgoing.search_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.search_dataout.topic=search_data
-
-mp.messaging.incoming.test_dataout.connector=smallrye-kafka
-mp.messaging.incoming.test_dataout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.test_dataout.topic=test_data
 
 mp.messaging.outgoing.webcmdsout.connector=smallrye-kafka
 mp.messaging.outgoing.webcmdsout.value.serializer=org.apache.kafka.common.serialization.StringSerializer
