--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,13 @@
 version: '2.3'
 
 services:
-
-  mysql:
-    image:  gennyproject/mysql:8x 
-    container_name: mysql
-    environment:
-      - MYSQL_URL=mysql
-      - MYSQL_DB=gennydb
-      - MYSQL_PORT=3306
-      - MYSQL_ALLOW_EMPTY=
-      - MYSQL_DATABASE=gennydb
-      - MYSQL_USER=genny
-      - MYSQL_PASSWORD=password
-      - MYSQL_ROOT_PASSWORD=password
-      - ADMIN_USERNAME=admin
-      - ADMIN_PASSWORD=password
-#    env_file:
-#      - ${ENV_FILE}
-    volumes:
-      - mysql_data:/var/lib/mysql:delegated
-    networks:
-      - mainproxy
-    ports:
-      - 3310:3306
-    command: --sql_mode=""
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
-    restart: unless-stopped
-
   genny-test-service:
-    depends_on:
-      mysql:
-        condition: service_healthy
-    image: gennyproject/genny-test-service:latest
+    image: gennyproject/genny-test-service:9.11.0
 #    container_name: bootq 
     volumes:
       - ./google_credentials:/root/.genny/sheets.googleapis.com-java-quickstart
-    env_file:
-      - ${ENV_FILE}
+    #env_file:
+    #  - ${ENV_FILE}
     environment:
 #      - VIRTUAL_HOST=bootq.*
       - VIRTUAL_PORT=8080
@@ -60,11 +27,9 @@ services:
       - GENNY_MYSQL_FULL_URL=alyson.genny.life:3310/gennydb?zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
     ports:
       - "8480:8080"
-      - "8487:8787"
-    links:
-      - mysql:mysql
+      - "8099:8098"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/version"]
+      test: ["CMD", "curl", "-f", "http://localhost:8098/version"]
       interval: 10s
       timeout: 10s
       retries: 100    
